                                  _   _ ____  _     
                              ___| | | |  _ \| |    
                             / __| | | | |_) | |    
                            | (__| |_| |  _ <| |___ 
                             \___|\___/|_| \_\_____|

                                  Changelog


Daniel (17 October)
- Made libcurl show verbose info about what auth type and user name that is
  being sent in its HTTP request-headers.

Daniel (16 October)
- Removed support for CURLOPT_PASSWDFUNCTION and CURLOPT_PASSWDDATA. libcurl
  no longer prompt for passwords under any circumstances. Password prompting
  was instead moved to curl, which now prompts for password if -u or -U lack
  it. This solves the problem Kevin Roth reported when curl prompted for
  password twice when doing NTLM authentication.

- I rewrote the SSL subjectAltName check to avoid having to rely on OpenLDAP-
  licensed derivate code.

Daniel (15 October)
- Avoid doing getsockopt() on Windows to verify connects. It seems that this
  hogs Windows machines when libcurl is being used multi-threaded (with > ~50
  threads). Andrew Fuller helped us verify and test this.

Daniel (14 October)
- Kimmo Kinnunen fixed a crash with duphandle() when CURLDEBUG is set.

- Gisle Vanem made libcurl build and work with IPv6 on Windows.

Daniel (13 October)
- Giuseppe Attardi reported yet another segfault with ares and the multi
  interface. Me fixed.

- Domenico Andreoli removed the extra LDFLAGS assignment in lib/Makefile.am
  that was reported about in the debian bug report #212086.

  Domenico also fixed two makefiles where we used 'gnroff' instead of the more
  portable $(NROFF).

Daniel (12 October)
- Dirk Manske made the share locking around DNS lookups slightly different to
  allow the share system's DNS lookups to run somewhat more
  independent/faster.

Daniel (9 October)
- Lachlan O'Dea fixed a resume problem: "If I set CURLOPT_RESUME_FROM, perform