@@ -2,6 +2,7 @@ Curl and libcurl 7.10.8 is out! A bugfix release.
 
 This release includes the following changes:
 
+ o CURLOPT_MAXFILESIZE was added, and --max-filesize.
  o CURLOPT_PASSWDFUNCTION and CURLOPT_PASSWDDATA are no longer supported.
  o IPv6 is now supported on Windows builds too
  o CURLOPT_IPRESOLVE lets you select pure IPv6 or IPv4 resolved addresses
